[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/itens/tilesets 1 sala.png" type="Texture" id=1]
[ext_resource path="res://script/caixa.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 21.5, 17 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -24, 21, 21, 21, -5, 21 )

[node name="caixa" type="KinematicBody2D" groups=["caixa"]]
collision_layer = 32
collision_mask = 63
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
position = Vector2( -1, -18 )
texture = ExtResource( 1 )
hframes = 8
vframes = 4
frame = 12

[node name="colisao" type="CollisionShape2D" parent="."]
modulate = Color( 0.180392, 0.0666667, 0.960784, 1 )
position = Vector2( -2.5, 4 )
shape = SubResource( 6 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )

[node name="Mover_caixa_baixo" type="RayCast2D" parent="."]
position = Vector2( -1, -3 )
rotation = -3.08377
scale = Vector2( 9, 1 )
enabled = true
cast_to = Vector2( 0.137251, 18.9682 )
collision_mask = 17

[node name="Mover_caixa_cima" type="RayCast2D" parent="."]
position = Vector2( -1, 18 )
rotation = -3.15279
scale = Vector2( 9, 1 )
enabled = true
cast_to = Vector2( 0.0307988, -21.9986 )
collision_mask = 17

[node name="Mover_caixa_direita" type="RayCast2D" parent="."]
position = Vector2( -13, 10 )
rotation = -3.16604
scale = Vector2( 1, 10 )
enabled = true
cast_to = Vector2( 22.9931, 0.0702927 )
collision_mask = 17

[node name="Mover_caixa_esquerda" type="RayCast2D" parent="."]
position = Vector2( 13, 10 )
rotation = -3.15958
scale = Vector2( 1, 10 )
enabled = true
cast_to = Vector2( -19.9968, -0.0449547 )
collision_mask = 17
